# stc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_tarballs.jl
STJL/: Project.toml
STJL/src/: STJL.jl  qual_macros.jl  transpiler.jl
cli/: cli.cpp  cli_utils.h
examples/: bryant_kusner.jl
include/: julia_guard.h
include/api/: benchmark_tracker.h  pkg.h  transpiler.h
include/ast/: context.h  symbol_pool.h  visitor.h
include/backend/glsl/: code_gen.h  context.h  glsl_context.h  target_info.h  type_utils.h  types.h
include/backend/glsl/builtin_defs/: fn_sigs.def  globals.def
include/common/: bump_arena.h  concepts.h  config.h  dyn_cast.h  src_info.h  term_utils.h  utils.h
include/frontend/jl/: ast.h  ast_utils.h  context.h  dumper.h  lowering.h  module_pool.h  parser.h  pkg_api.h  pkg_driver.h  sema.h  sym_res.h  utils.h  visitor.h
include/frontend/jl/node_defs/: all_nodes.def  expr.def  stmt.def
include/frontend/jl/rt/: env.h  module_cache.h  sym_cache.h  type_cache.h  utils.h
include/ir/: ast.h  ast_context.h  ast_dumper.h  ast_visitor.h  type_descriptors.h  type_pool.h
include/ir/node_defs/: all_nodes.def  expr.def  stmt.def
include/meta/: version.h.in
include/sir/: ast.h  context.h  dumper.h  sema.h  visitor.h
include/sir/node_defs/: expr.def  stmt.def
include/types/: qualifier_pool.h  qualifiers.h  type_descriptors.h  type_pool.h
include/types/qualifier_defs/: layout_value.def  layout_valueless.def  non_layout.def
sandbox/: run_main.cpp  sb_full.cpp  sb_jl_lower.cpp
scripts/: build_all.ps1  init_debug_env.sh
src/api/: pkg.cpp  transpiler.cpp
src/ast/: symbol_pool.cpp
src/backend/glsl/: builtin_data.cpp  code_gen.cpp  target_info.cpp
src/common/: src_info.cpp  target_info.cpp  term_utils.cpp  utils.cpp
src/frontend/jl/: ast.cpp  dumper.cpp  lowering.cpp  parser.cpp  pkg_api.cpp  pkg_driver.cpp  sema.cpp  sym_res.cpp  type_conversion.cpp
src/frontend/jl/rt/: module_cache.cpp
src/ir/: ast_context.cpp  ast_dumper.cpp
src/sir/: ast.cpp  dumper.cpp  sema.cpp
src/types/: qualifier_pool.cpp  type_pool.cpp  type_to_string.cpp
test/: transpile_examples.cpp
